<resources>
    <string name="app_name">ActivityResultExam</string>
    <string name="helloName">Привет! Как вас зовут?</string>
    <string name="language">Ваш язык: Неизвестно</string>
    <string name="introduce">Представиться</string>
    <string name="setLanguage">Выбрать язык</string>
    <string name="youName">Ваше имя:</string>
    <string name="languageRussia">Русский</string>
    <string name="languageEnglish">English</string>
    <string name="languageUkrainian">Украинский</string>
</resources>
