<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/helloName"
            android:id="@+id/txtName" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/language"
            android:id="@+id/txtLanguage" android:layout_below="@+id/txtName" android:layout_centerHorizontal="true"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introduce"
            android:id="@+id/btnPresented"
            android:onClick="onShow"
            android:layout_below="@+id/txtLanguage" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setLanguage"
            android:id="@+id/btnLanguage"
            android:onClick="onShow"
            android:layout_below="@+id/txtLanguage" android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
</RelativeLayout>