<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/languageEnglish"
            android:onClick="onSelectedLanguage"
            android:id="@+id/btnEnglish" android:layout_alignParentLeft="true" android:layout_marginLeft="0dp"
            android:layout_alignParentTop="true" android:layout_marginTop="0dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/languageRussia"
            android:id="@+id/btnRussian" android:layout_gravity="center_horizontal"
            android:layout_toEndOf="@+id/btnEnglish"
            android:layout_toStartOf="@+id/btnRussian"
            android:onClick="onSelectedLanguage"
            android:layout_alignParentTop="true" android:layout_toRightOf="@+id/btnEnglish"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/languageUkrainian"
            android:id="@+id/btnUkrainian"
            android:onClick="onSelectedLanguage"
            android:layout_alignParentTop="true" android:layout_toRightOf="@+id/btnRussian"
            android:layout_toEndOf="@+id/btnRussian"/>
</RelativeLayout>